# ZF-Smart-Planner

./: .gitignore  Analysis.ipynb  README.md  datalib.py  run  zfsmartplanner.pptx
app/: pyproject.toml
app/static/css/: bootstrap.min.css
app/static/html/: embedsnippet.rtf  index.tpl  result-driver.tpl  result-summary.tpl  result-truck.tpl
app/zf_smart_planner/: datalib.py  route.py  serve.py  util.py
presentation/: zfsmartplanner.pptx
pschorr/: pyproject.toml
pschorr/pschorr/: route.py  serve.py
pschorr/static/html/: index.tpl  result-driver.tpl  result-truck.tpl
pschorr/tests/: test_pschorr.py
