[tool.poetry]
name = "pschorr"
version = "0.1.0"
description = ""
authors = ["Anonymous <anon@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bottle = "^0.12.23"
pyroutelib3 = "^1.7.2"
requests = "^2.28.1"
protobuf = "3.20.0"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
prospector = {extras = ["with_mypy"], version = "^1.7.7"}
black = "^22.8.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
